--- a/package.json
+++ b/package.json
@@ -17,7 +17,15 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "db:migrate:run": "ts-node -r tsconfig-paths/register -r dotenv/config ./node_modules/typeorm/cli.js -d src/database/data-source.ts migration:run",
+    "db:migrate:revert": "ts-node -r tsconfig-paths/register -r dotenv/config ./node_modules/typeorm/cli.js -d src/database/data-source.ts migration:revert",
+    "db:migration:show": "ts-node -r tsconfig-paths/register -r dotenv/config ./node_modules/typeorm/cli.js -d src/database/data-source.ts migration:show",
+    "db:migration:generate": "ts-node -r tsconfig-paths/register -r dotenv/config ./node_modules/typeorm/cli.js -d src/database/data-source.ts migration:generate src/database/migrations/AutoMigration",
+    "db:migrate:run:prod": "node ./node_modules/typeorm/cli.js -d dist/database/data-source.js migration:run",
+    "db:migrate:revert:prod": "node ./node_modules/typeorm/cli.js -d dist/database/data-source.js migration:revert",
+    "db:migration:show:prod": "node ./node_modules/typeorm/cli.js -d dist/database/data-source.js migration:show",
+    "render:start": "npm run build && npm run db:migrate:run:prod && npm run start:prod"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -28,6 +36,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "mysql2": "^3.14.3",
+    "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.26"
