gestion de usuarios

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,13 @@ DATABASE_URL=postgresql://<USER>:<PASSWORD>@<HOST>/<DB_NAME>
 # - "strict": SSL con verificación estricta de certificado
 # - "false" / "0" / "off": deshabilita SSL (no recomendado)
 DB_SSL=true
+
+# Clave secreta para firmar tokens JWT (CAMBIAR EN PRODUCCIÓN)
+# Generar una clave segura: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET="5916d3e0539e5b99b7706fbb2958afbe"
+
+# Puerto de la aplicación (Render lo asignará automáticamente)
+PORT=3000
+
+# Entorno de ejecución
+NODE_ENV=production
